Checkout codefresh to master

--- a/codefresh/CI/pipeline-spec.yml
+++ b/codefresh/CI/pipeline-spec.yml
@@ -74,6 +74,9 @@ spec:
       context: Dapulse-OAuth2
       contexts:
         - sandbox
+      variables:
+        - key: TRIGGER_TYPE
+          value: prod
 
   stages: []
   contexts: []
