--- a/codefresh/CI/workflow.yml
+++ b/codefresh/CI/workflow.yml
@@ -165,6 +165,7 @@ steps:
         all:
           isMaster: "'${{CF_BRANCH}}' == 'master'"
           myCondition: deploy_staging.result == 'success'
+          isProd: '"${{TRIGGER_TYPE}}" == "prod"'
 
 
   push_tag:
